--- a/index.html
+++ b/index.html
@@ -4,9 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--embading fontawesome icons-->
+    <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="\images\logo\ohmyfood@2x.svg" alt="logo">
+        <form action="#" method="POST">
+            <span class="fas fa-map-marker-alt"></span>
+            <input type="text" name="location" id="location">
+        </form>
+
+        <div>
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+            <button>
+                Explorer nos restaurants
+            </button>
+        </div>
+    </header>
+    <main>
+        <div>
+            <h2>Fonctionnement</h2>
+            <div>
+                <span>1</span>
+                <span class="fas fa-mobile-alt"></span>
+                <p>Choisissez un restaurant</p>
+            </div>
+
+            <div>
+                <span>2</span>
+                <span class="fas fa-list-ul"></span>
+                <p>Composez votre menu</p>
+            </div>
+
+            <div>
+                <span>3</span>
+                <span class="fas fa-store"></span>
+                <p>Dégustez votre menu</p>
+            </div>
+        </div>
+
+        <div>
+            <h2>Restaurants</h2>
+            <div>
+                <img src="/images/restaurants/la-palette-du-gout.jpg">
+                <div>
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>    
+                </div>
+                <span class="far fa-heart"></span>
+            </div>
+
+            <div>
+                <img src="/images/restaurants/la-note-enchantee.jpg">
+                <div>
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>    
+                </div>
+                <span class="far fa-heart"></span>
+            </div>
+
+            <div>
+                <img src="/images/restaurants/a-la-francaise.jpg">
+                <div>
+                    <h3>À la française</h3>
+                    <p>Cité Rouge</p>    
+                </div>
+                <span class="far fa-heart"></span>
+            </div>
+
+            <div>
+                <img src="/images/restaurants/le-delice-des-sens.jpg">
+                <div>
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>    
+                </div>
+                <span class="far fa-heart"></span>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <img src="\images\logo\ohmyfood@2x.svg" alt="logo">
+        <a href="#"><span class="fas fa-utensils"></span>Proposer un restaurant</a>
+        <a href="#"><span class="fas fa-hands-helping"></span>Proposer un restaurant</a>
+    </footer>
 </body>
 </html>
