add 4 pages in /restaurants/

--- a/index.html
+++ b/index.html
@@ -48,41 +48,41 @@
 
         <div>
             <h2>Restaurants</h2>
-            <div>
+            <a href="/restaurants/la-palette-du-gout.html">
                 <img src="/images/restaurants/la-palette-du-gout.jpg">
                 <div>
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>    
                 </div>
                 <span class="far fa-heart"></span>
-            </div>
+            </a>
 
-            <div>
+            <a href="/restaurants/la-note-enchantee.html">
                 <img src="/images/restaurants/la-note-enchantee.jpg">
                 <div>
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>    
                 </div>
                 <span class="far fa-heart"></span>
-            </div>
+            </a>
 
-            <div>
+            <a href="/restaurants/a-la-francaise.html">
                 <img src="/images/restaurants/a-la-francaise.jpg">
                 <div>
                     <h3>À la française</h3>
                     <p>Cité Rouge</p>    
                 </div>
                 <span class="far fa-heart"></span>
-            </div>
+            </a>
 
-            <div>
+            <a href="/restaurants/le-delice-des-sens.html">
                 <img src="/images/restaurants/le-delice-des-sens.jpg">
                 <div>
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>    
                 </div>
                 <span class="far fa-heart"></span>
-            </div>
+            </a>
         </div>
     </main>
 
