modify index: restructure header, add missing links in footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <header>
         <img src="\images\logo\ohmyfood@2x.svg" alt="logo">
+    </header>
+    <main>
         <form action="#" method="POST">
             <span class="fas fa-map-marker-alt"></span>
             <input type="text" name="location" id="location">
@@ -23,8 +25,7 @@
                 Explorer nos restaurants
             </button>
         </div>
-    </header>
-    <main>
+
         <div>
             <h2>Fonctionnement</h2>
             <div>
@@ -90,6 +91,8 @@
         <img src="\images\logo\ohmyfood@2x.svg" alt="logo">
         <a href="#"><span class="fas fa-utensils"></span>Proposer un restaurant</a>
         <a href="#"><span class="fas fa-hands-helping"></span>Proposer un restaurant</a>
+        <a href="#">Mentions légales</a>
+        <a href="mailto:">Contact</a>
     </footer>
 </body>
 </html>
