--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--embading fontawesome icons-->
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="./public/css/main.css">
+    <title>ohmyfood</title>
 </head>
 <body>
     <header>
