--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -92,8 +92,15 @@
                     <span class="dish--select fas fa-check-circle"></span>
                 </div>
             </div>
-
         </div>
-    </main>  
+    </main>
+
+    <footer>
+        <img class="footer-logo" src="\images\logo\ohmyfood@2x.svg" alt="logo">
+        <a href="#"><span class="fas fa-utensils"></span>Proposer un restaurant</a>
+        <a href="#"><span class="fas fa-hands-helping"></span>Proposer un restaurant</a>
+        <a href="#">Mentions légales</a>
+        <a href="mailto:">Contact</a>
+    </footer>
 </body>
 </html>
