modify index: add tag 'nouveau'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
         </div>
 
-        <section class="how-it-works">
+        <section class="steps">
             <h2 class="section-title">Fonctionnement</h2>
             <div class="steps-wrapper">
                 <div class="step-wrapper">
@@ -47,7 +47,6 @@
                     <span class="step-icon fas fa-store"></span>
                     <p class="step-descr">Dégustez votre menu</p>
                 </div>
-    
             </div>
         </section>
 
@@ -56,26 +55,26 @@
 
             <div class="restaurant-wrapper">
                 <a href="/restaurants/la-palette-du-gout.html">
+                    <div class="tag">Nouveau</div>
                     <img src="/images/restaurants/la-palette-du-gout.jpg">
                     <div class="content-wrapper">
-                        <div>
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>    
-                        </div>
-                        <span class="far fa-heart"></span>    
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>    
                     </div>
                 </a>
+                <a href="#"><span class="far fa-heart"></span></a>    
             </div>
 
             <div class="restaurant-wrapper"> 
                 <a href="/restaurants/la-note-enchantee.html">
+                    <div class="tag">Nouveau</div>
                     <img src="/images/restaurants/la-note-enchantee.jpg">
                     <div class="content-wrapper">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>    
-                        <span class="far fa-heart"></span>    
                     </div>
                 </a>
+                <a href="#"><span class="far fa-heart fa-heart--active"></span></a>    
             </div>
 
             <div class="restaurant-wrapper">
@@ -84,9 +83,9 @@
                     <div class="content-wrapper">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>    
-                        <span class="far fa-heart"></span>    
                     </div>
                 </a>
+                <a href="#"><span class="far fa-heart"></span></a>    
             </div>
 
             <div class="restaurant">
@@ -95,9 +94,9 @@
                     <div class="content-wrapper">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>    
-                        <span class="far fa-heart"></span>    
                     </div>
                 </a>
+                <a href="#" class="btn-fav"><span class="far fa-heart"></span></a>    
             </div>
         </section>
     </main>
