fix structure acc. w3c check

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="\images\logo\ohmyfood@2x.svg" alt="logo">
+        <img src="/images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
     <main>
         <form class="search-box" action="#" method="get">
@@ -22,8 +22,10 @@
         <div class="top-banner">
             <h1 class="top-banner__title">Réservez le menu qui vous convient</h1>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <a class="top-banner__button" type="button" href="#restaurants">
-                Explorer nos restaurants
+            <a href="#restaurants">
+                <span class="top-banner__button">
+                    Explorer nos restaurants
+                </span>
             </a>
         </div>
 
@@ -56,7 +58,7 @@
             <div class="restaurant-wrapper">
                 <a href="/restaurants/la-palette-du-gout.html">
                     <div class="tag">Nouveau</div>
-                    <img src="/images/restaurants/la-palette-du-gout.jpg">
+                    <img src="/images/restaurants/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                     <div class="content-wrapper">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>    
@@ -68,7 +70,7 @@
             <div class="restaurant-wrapper"> 
                 <a href="/restaurants/la-note-enchantee.html">
                     <div class="tag">Nouveau</div>
-                    <img src="/images/restaurants/la-note-enchantee.jpg">
+                    <img src="/images/restaurants/la-note-enchantee.jpg" alt="Photo: La note enchantée">
                     <div class="content-wrapper">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>    
@@ -79,7 +81,7 @@
 
             <div class="restaurant-wrapper">
                 <a href="/restaurants/a-la-francaise.html">
-                    <img src="/images/restaurants/a-la-francaise.jpg">
+                    <img src="/images/restaurants/a-la-francaise.jpg" alt="Photo: À la française">
                     <div class="content-wrapper">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>    
@@ -90,7 +92,7 @@
 
             <div class="restaurant">
                 <a href="/restaurants/le-delice-des-sens.html">
-                    <img src="/images/restaurants/le-delice-des-sens.jpg">
+                    <img src="/images/restaurants/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
                     <div class="content-wrapper">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>    
@@ -102,7 +104,7 @@
     </main>
 
     <footer>
-        <img class="footer-logo" src="\images\logo\ohmyfood@2x.svg" alt="logo">
+        <img class="footer-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
         <a href="#"><span class="fas fa-utensils"></span>Proposer un restaurant</a>
         <a href="#"><span class="fas fa-hands-helping"></span>Proposer un restaurant</a>
         <a href="#">Mentions légales</a>
