--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -16,7 +16,7 @@
     </header>
     
     <main>
-        <img src="/images/restaurants/a-la-francaise.jpg" alt="photo du restaurant" title="À la française">
+        <img src="/images/restaurants/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
         <div class="menu">
             <h1 class="menu-title">À la française</h1>
             <span class="far fa-heart"></span>
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <img class="footer-logo" src="\images\logo\ohmyfood@2x.svg" alt="logo">
+        <img class="footer-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
         <a href="#"><span class="fas fa-utensils"></span>Proposer un restaurant</a>
         <a href="#"><span class="fas fa-hands-helping"></span>Proposer un restaurant</a>
         <a href="#">Mentions légales</a>
