--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--embading fontawesome icons-->
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./public/css/main.css">
+    <link rel="stylesheet" href="css/prefixed/main.css">
     <title>ohmyfood</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <main>
         <form class="search-box" action="#" method="get">
             <span class="fas fa-map-marker-alt"></span>
-            <input type="text" name="mySearchString" id="mySearchString">
+            <input type="text" name="my-search-string" id="my-search-string">
         </form>
 
         <div class="top-banner">
@@ -55,7 +55,7 @@
         <section class="restaurants">
             <h2 class="section-title" id="restaurants">Restaurants</h2>
 
-            <div class="restaurant-wrapper">
+            <div class="card">
                 <a href="/restaurants/la-palette-du-gout.html">
                     <div class="tag">Nouveau</div>
                     <img src="/images/restaurants/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
