modify index: replace form by plain text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img src="/images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
     <main>
-        <form class="search-box" action="#" method="get">
-            <span class="fas fa-map-marker-alt"></span>
-            <input type="text" name="my-search-string" id="my-search-string">
-        </form>
+        <div class="search-box">
+            <span class="search-box__icon fas fa-map-marker-alt"></span>
+            <p class="search-box__input">Paris, Belleville</p>
+        </div>
 
         <div class="top-banner">
             <h1 class="top-banner__title">Réservez le menu qui vous convient</h1>
