--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--embading fontawesome icons-->
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/prefixed/main.css">
+    <!--Import Google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>
-        <img src="/images/logo/ohmyfood@2x.svg" alt="logo">
+    <header class="header">
+        <img class="header-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
     <main>
         <div class="search-box">
@@ -22,11 +25,9 @@
         <div class="top-banner">
             <h1 class="top-banner__title">Réservez le menu qui vous convient</h1>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <a href="#restaurants">
-                <span class="top-banner__button">
-                    Explorer nos restaurants
-                </span>
-            </a>
+            <button class="top-banner__button" type="button">
+                Explorer nos restaurants
+            </button>
         </div>
 
         <section class="steps">
