--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <h2 class="section-title" id="restaurants">Restaurants</h2>
 
             <div class="card">
-                <a href="/restaurants/la-palette-du-gout.html">
+                <a href="/menus/la-palette-du-gout.html">
                     <div class="tag">Nouveau</div>
-                    <img src="/images/restaurants/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
+                    <img src="/images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                     <div class="content-wrapper">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>    
@@ -69,9 +69,9 @@
             </div>
 
             <div class="restaurant-wrapper"> 
-                <a href="/restaurants/la-note-enchantee.html">
+                <a href="/menus/la-note-enchantee.html">
                     <div class="tag">Nouveau</div>
-                    <img src="/images/restaurants/la-note-enchantee.jpg" alt="Photo: La note enchantée">
+                    <img src="/images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
                     <div class="content-wrapper">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>    
@@ -81,8 +81,8 @@
             </div>
 
             <div class="restaurant-wrapper">
-                <a href="/restaurants/a-la-francaise.html">
-                    <img src="/images/restaurants/a-la-francaise.jpg" alt="Photo: À la française">
+                <a href="/menus/a-la-francaise.html">
+                    <img src="/images/menus/a-la-francaise.jpg" alt="Photo: À la française">
                     <div class="content-wrapper">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>    
@@ -92,8 +92,8 @@
             </div>
 
             <div class="restaurant">
-                <a href="/restaurants/le-delice-des-sens.html">
-                    <img src="/images/restaurants/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
+                <a href="/menus/le-delice-des-sens.html">
+                    <img src="/images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
                     <div class="content-wrapper">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>    
