--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
     <!--Import Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>ohmyfood</title>
 </head>
@@ -33,22 +33,22 @@
         <section class="steps">
             <h2 class="section-title">Fonctionnement</h2>
             <div class="steps-wrapper">
-                <div class="step-wrapper">
-                    <span class="step-number">1</span>
-                    <span class="step-icon fas fa-mobile-alt"></span>
-                    <p class="step-descr">Choisissez un restaurant</p>
+                <div class="step">
+                    <p class="step__num">1</p>
+                    <span class="step__icon fas fa-mobile-alt fa-fw"></span>
+                    <p class="step__descr">Choisissez un restaurant</p>
                 </div>
     
-                <div class="step-wrapper">
-                    <span class="step-number">2</span>
-                    <span class="step-icon fas fa-list-ul"></span>
-                    <p class="step-descr">Composez votre menu</p>
+                <div class="step">
+                    <p class="step__num">2</p>
+                    <span class="step__icon fas fa-list-ul fa-fw"></span>
+                    <p class="step__descr">Composez votre menu</p>
                 </div>
     
-                <div class="step-wrapper step-wrapper--active">
-                    <span class="step-number">3</span>
-                    <span class="step-icon fas fa-store"></span>
-                    <p class="step-descr">Dégustez votre menu</p>
+                <div class="step step--active">
+                    <p class="step__num">3</p>
+                    <span class="step__icon fas fa-store fa-fw"></span>
+                    <p class="step__descr">Dégustez votre menu</p>
                 </div>
             </div>
         </section>
