--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
                 <div class="step step--active">
                     <p class="step__num">3</p>
-                    <span class="step__icon fas fa-store fa-fw"></span>
+                    <span class="step__icon step--active__icon fas fa-store fa-fw"></span>
                     <p class="step__descr">Dégustez votre menu</p>
                 </div>
             </div>
