modify favorite button

--- a/index.html
+++ b/index.html
@@ -60,41 +60,46 @@
                 <a href="/menus/la-palette-du-gout.html">
                     <p class="tag">Nouveau</p>
                     <img class="card__img" src="/images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
-                    
                     <div class="card__descr">
                         <h3 class="card__title">La palette du goût</h3>
                         <p>Ménilmontant</p>    
                     </div>
                 </a>
-                <a href="#"><span class="far fa-heart fa-lg"></span></a>    
+                <a href="#"><span class="favorite far fa-heart"></span></a>    
             </div>
 
             <div class="card"> 
                 <a href="/menus/la-note-enchantee.html">
                     <p class="tag">Nouveau</p>
                     <img class="card__img" src="/images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
-                    <h3 class="card__title">La note enchantée</h3>
-                    <p class="card__descr">Charonne</p>    
+                    <div class="card__descr">
+                        <h3 class="card__title">La note enchantée</h3>
+                        <p>Charonne</p>    
+                    </div>
                 </a>
-                <a href="#"><span class="far fa-heart fa-lg fa-heart--active"></span></a>    
+                <a href="#"><span class="favorite favorite--active far fa-heart"></span></a>    
             </div>
 
             <div class="card">
                 <a href="/menus/a-la-francaise.html">
                     <img class="card__img" src="/images/menus/a-la-francaise.jpg" alt="Photo: À la française">
-                    <h3 class="card__title">À la française</h3>
-                    <p class="card__descr">Cité Rouge</p>    
+                    <div class="card__descr">
+                        <h3 class="card__title">À la française</h3>
+                        <p>Cité Rouge</p>                            
+                    </div>
                 </a>
-                <a href="#"><span class="far fa-heart fa-lg"></span></a>    
+                <a href="#"><span class="favorite far fa-heart"></span></a>    
             </div>
 
-            <div class="restaurant">
+            <div class="card">
                 <a href="/menus/le-delice-des-sens.html">
                     <img class="card__img" src="/images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
-                    <h3 class="card__title">Le délice des sens</h3>
-                    <p class="card__descr">Folie-Méricourt</p>    
+                    <div class="card__descr">
+                        <h3 class="card__title">Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>    
+                    </div>
                 </a>
-                <a href="#" class="btn-fav"><span class="far fa-heart fa-lg"></span></a>    
+                <a href="#"><span class="favorite far fa-heart"></span></a>    
             </div>
         </section>
     </main>
