modify footer: add color and restructure

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         </section>
     </main>
 
-    <footer>
-        <img class="footer-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
-        <a href="#"><span class="fas fa-utensils"></span>Proposer un restaurant</a>
-        <a href="#"><span class="fas fa-hands-helping"></span>Proposer un restaurant</a>
-        <a href="#">Mentions légales</a>
-        <a href="mailto:">Contact</a>
+    <footer class="footer">
+        <p class="footer__title">ohmyfood</p>
+        <a class="footer__link" href="#"><span class="fas fa-utensils fa-fw"></span><p>Proposer un restaurant</p></a>
+        <a class="footer__link" href="#"><span class="fas fa-hands-helping fa-fw"></span><p>Devenir partenaire</p></a>
+        <a class="footer__link" href="#"><p>Mentions légales</p></a>
+        <a class="footer__link" href="mailto:"><p>Contact</p></a>
     </footer>
 </body>
 </html>
