--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
     <footer class="footer">
         <p class="footer__title">ohmyfood</p>
-        <a class="footer__link" href="#"><span class="fas fa-utensils fa-fw"></span><p>Proposer un restaurant</p></a>
-        <a class="footer__link" href="#"><span class="fas fa-hands-helping fa-fw"></span><p>Devenir partenaire</p></a>
+        <a class="footer__link" href="#"><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span><p>Proposer un restaurant</p></a>
+        <a class="footer__link" href="#"><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span><p>Devenir partenaire</p></a>
         <a class="footer__link" href="#"><p>Mentions légales</p></a>
         <a class="footer__link" href="mailto:"><p>Contact</p></a>
     </footer>
