modify index: adjust margins and image height in cards

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a class="footer__link" href="#"><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span><p>Proposer un restaurant</p></a>
         <a class="footer__link" href="#"><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span><p>Devenir partenaire</p></a>
         <a class="footer__link" href="#"><p>Mentions légales</p></a>
-        <a class="footer__link" href="mailto:"><p>Contact</p></a>
+        <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
 </html>
