modify menu: add header button

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -14,12 +14,14 @@
 </head>
 <body>
     <header class="header">
-        <button><span class="fas fa-arrow-left"></span></button>
-        <img src="/images/logo/ohmyfood@2x.svg" alt="logo">
+        <a href="../index.html">
+            <span class="header__button fas fa-arrow-left"></span>
+        </a>
+        <img class="header-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
     
     <main>
-        <img src="/images/restaurants/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
+        <img src="/images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
         <div class="menu">
             <h1 class="menu-title">À la française</h1>
             <span class="far fa-heart"></span>
