modify menu: add dish cards

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -18,84 +18,85 @@
             <span class="header__button fas fa-arrow-left"></span>
         </a>
         <img class="header-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
+        <img class="menu-photo" src="/images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
     </header>
     
-    <main>
-        <img src="/images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
-        <div class="menu">
+    <main class="menu">
+        <div class="menu__top">
             <h1 class="menu-title">À la française</h1>
             <span class="far fa-heart"></span>
-            <div class="menu-catagory">
-                <h2 class="menu-catagory__title">Entrées</h2>
-                <div class="dish">
-                    <h3 class="dish__title">Tartare de poulpe acidulé</h3>
-                    <p class="dish__descr">Aux zestes d'orange</p>
-                    <p class="dish__price">25€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
+        </div>
 
-                <div class="dish">
-                    <h3 class="dish__title">Velouté de légumes d'antan</h3>
-                    <p class="dish__descr">Carotte, panais, topinambour</p>
-                    <p class="dish__price">35€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
-
-                <div class="dish">
-                    <h3 class="dish__title">Soupe à l'oignon</h3>
-                    <p class="dish__descr">Revisitée</p>
-                    <p class="dish__price">20€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
+        <h2 class="menu-catagory__title">Entrées</h2>
+        <div class="menu-catagory">
+            <div class="dish">
+                <h3 class="dish__title">Tartare de poulpe acidulé</h3>
+                <p class="dish__descr">Aux zestes d'orange</p>
+                <p class="dish__price">25€</p>
+                <span class="dish--select fas fa-check-circle"></span>
             </div>
 
-            <div class="menu-catagory">
-                <h2 class="menu-catagory__title">Plats</h2>
-                <div class="dish">
-                    <h3 class="dish__title">Coquilles Saint-Jacques</h3>
-                    <p class="dish__descr">Accompagnées d'une purée de panais</p>
-                    <p class="dish__price">40€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
-
-                <div class="dish">
-                    <h3 class="dish__title">Magret de canard</h3>
-                    <p class="dish__descr">Et parmentier de pommes de terre</p>
-                    <p class="dish__price">35€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
-
-                <div class="dish">
-                    <h3 class="dish__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                    <p class="dish__descr">Sur son lit de gnocchis aux légumes</p>
-                    <p class="dish__price">44€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
+            <div class="dish">
+                <h3 class="dish__title">Velouté de légumes d'antan</h3>
+                <p class="dish__descr">Carotte, panais, topinambour</p>
+                <p class="dish__price">35€</p>
+                <span class="dish--select fas fa-check-circle"></span>
             </div>
 
+            <div class="dish">
+                <h3 class="dish__title">Soupe à l'oignon</h3>
+                <p class="dish__descr">Revisitée</p>
+                <p class="dish__price">20€</p>
+                <span class="dish--select fas fa-check-circle"></span>
+            </div>
+        </div>
 
-            <div class="menu-catagory">
-                <h2 class="menu-catagory__title">Desserts</h2>
-                <div class="dish">
-                    <h3 class="dish__title">Pétales de violettes glacés</h3>
-                    <p class="dish__descr">Et purée de noisettes</p>
-                    <p class="dish__price">18€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
+        <h2 class="menu-catagory__title">Plats</h2>
+        <div class="menu-catagory">
+            <div class="dish">
+                <h3 class="dish__title">Coquilles Saint-Jacques</h3>
+                <p class="dish__descr">Accompagnées d'une purée de panais</p>
+                <p class="dish__price">40€</p>
+                <span class="dish--select fas fa-check-circle"></span>
+            </div>
 
-                <div class="dish">
-                    <h3 class="dish__title">Fondant au chocolat</h3>
-                    <p class="dish__descr">Revisité</p>
-                    <p class="dish__price">22€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
+            <div class="dish">
+                <h3 class="dish__title">Magret de canard</h3>
+                <p class="dish__descr">Et parmentier de pommes de terre</p>
+                <p class="dish__price">35€</p>
+                <span class="dish--select fas fa-check-circle"></span>
+            </div>
 
-                <div class="dish">
-                    <h3 class="dish__title">Millefeuille croustillant</h3>
-                    <p class="dish__descr">Myrtilles et pâte d’amande</p>
-                    <p class="dish__price">23€</p>
-                    <span class="dish--select fas fa-check-circle"></span>
-                </div>
+            <div class="dish">
+                <h3 class="dish__title">Pigeonneau d’Ille-et-Vilaine</h3>
+                <p class="dish__descr">Sur son lit de gnocchis aux légumes</p>
+                <p class="dish__price">44€</p>
+                <span class="dish--select fas fa-check-circle"></span>
+            </div>
+        </div>
+
+
+        <h2 class="menu-catagory__title">Desserts</h2>
+        <div class="menu-catagory">
+            <div class="dish">
+                <h3 class="dish__title">Pétales de violettes glacés</h3>
+                <p class="dish__descr">Et purée de noisettes</p>
+                <p class="dish__price">18€</p>
+                <span class="dish--select fas fa-check-circle"></span>
+            </div>
+
+            <div class="dish">
+                <h3 class="dish__title">Fondant au chocolat</h3>
+                <p class="dish__descr">Revisité</p>
+                <p class="dish__price">22€</p>
+                <span class="dish--select fas fa-check-circle"></span>
+            </div>
+
+            <div class="dish">
+                <h3 class="dish__title">Millefeuille croustillant</h3>
+                <p class="dish__descr">Myrtilles et pâte d’amande</p>
+                <p class="dish__price">23€</p>
+                <span class="dish--select fas fa-check-circle"></span>
             </div>
         </div>
     </main>
