modify menu: partiel border on titles

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <a href="/menus/la-palette-du-gout.html">
                     <p class="tag">Nouveau</p>
                     <img class="card__img" src="/images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
-                    <div class="card__descr">
+                    <div class="card__content">
                         <h3 class="card__title">La palette du goût</h3>
-                        <p>Ménilmontant</p>    
+                        <p class="card__descr">Ménilmontant</p>    
                     </div>
                 </a>
                 <a href="#"><span class="favorite far fa-heart"></span></a>    
@@ -72,9 +72,9 @@
                 <a href="/menus/la-note-enchantee.html">
                     <p class="tag">Nouveau</p>
                     <img class="card__img" src="/images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
-                    <div class="card__descr">
+                    <div class="card__content">
                         <h3 class="card__title">La note enchantée</h3>
-                        <p>Charonne</p>    
+                        <p class="card__descr">Charonne</p>    
                     </div>
                 </a>
                 <a href="#"><span class="favorite favorite--active far fa-heart"></span></a>    
@@ -83,9 +83,9 @@
             <div class="card">
                 <a href="/menus/a-la-francaise.html">
                     <img class="card__img" src="/images/menus/a-la-francaise.jpg" alt="Photo: À la française">
-                    <div class="card__descr">
+                    <div class="card__content">
                         <h3 class="card__title">À la française</h3>
-                        <p>Cité Rouge</p>                            
+                        <p class="card__descr">Cité Rouge</p>                            
                     </div>
                 </a>
                 <a href="#"><span class="favorite far fa-heart"></span></a>    
@@ -94,9 +94,9 @@
             <div class="card">
                 <a href="/menus/le-delice-des-sens.html">
                     <img class="card__img" src="/images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
-                    <div class="card__descr">
+                    <div class="card__content">
                         <h3 class="card__title">Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>    
+                        <p class="card__descr">Folie-Méricourt</p>    
                     </div>
                 </a>
                 <a href="#"><span class="favorite far fa-heart"></span></a>    
