--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -27,8 +27,8 @@
             <span class="far fa-heart"></span>
         </div>
 
-        <h2 class="menu-catagory__title">Entrées</h2>
-        <div class="menu-catagory">
+        <h2 class="menu-catagory">Entrées</h2>
+        <div class="dishes">
             <div class="dish">
                 <h3 class="dish__title">Tartare de poulpe acidulé</h3>
                 <p class="dish__descr">Aux zestes d'orange</p>
@@ -51,8 +51,8 @@
             </div>
         </div>
 
-        <h2 class="menu-catagory__title">Plats</h2>
-        <div class="menu-catagory">
+        <h2 class="menu-catagory">Plats</h2>
+        <div class="dishes">
             <div class="dish">
                 <h3 class="dish__title">Coquilles Saint-Jacques</h3>
                 <p class="dish__descr">Accompagnées d'une purée de panais</p>
@@ -76,8 +76,8 @@
         </div>
 
 
-        <h2 class="menu-catagory__title">Desserts</h2>
-        <div class="menu-catagory">
+        <h2 class="menu-catagory">Desserts</h2>
+        <div class="dishes">
             <div class="dish">
                 <h3 class="dish__title">Pétales de violettes glacés</h3>
                 <p class="dish__descr">Et purée de noisettes</p>
