add variables: border-radius

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -99,6 +99,8 @@
                 <span class="dish--select fas fa-check-circle"></span>
             </div>
         </div>
+
+        <button>Commander</button>
     </main>
 
     <footer class="footer">
