--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <button>Commander</button>
+        <button class="button" type="button">Commander</button>
     </main>
 
     <footer class="footer">
