modify settings: typography, padding, margin (TBC)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="top-banner">
-            <h1 class="top-banner__title">Réservez le menu qui vous convient</h1>
+            <h1 class="title-home">Réservez le menu qui vous convient</h1>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <button class="top-banner__button" type="button">
                 Explorer nos restaurants
@@ -105,7 +105,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__title">ohmyfood</p>
+        <h4 class="footer__title">ohmyfood</h4>
         <a class="footer__link" href="#"><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span><p>Proposer un restaurant</p></a>
         <a class="footer__link" href="#"><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span><p>Devenir partenaire</p></a>
         <a class="footer__link" href="#"><p>Mentions légales</p></a>
