--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -23,7 +23,7 @@
     
     <main class="menu">
         <div class="menu__top">
-            <h1 class="menu-title">À la française</h1>
+            <h1 class="title-menu">À la française</h1>
             <span class="far fa-heart"></span>
         </div>
 
