modify typography and button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="top-banner">
-            <h1 class="title-home">Réservez le menu qui vous convient</h1>
+            <h1 class="home-title">Réservez le menu qui vous convient</h1>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <button class="top-banner__button" type="button">
                 Explorer nos restaurants
