--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <title>À la française</title>
 </head>
-<body>
+<body class="menu">
     <header class="header">
         <a href="../index.html">
             <span class="header__button fas fa-arrow-left"></span>
@@ -21,9 +21,9 @@
         <img class="menu-photo" src="/images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
     </header>
     
-    <main class="menu">
-        <div class="menu__top">
-            <h1 class="title-menu">À la française</h1>
+    <main class="menu-wrapper">
+        <div class="title-wrapper">
+            <h1 class="menu-title">À la française</h1>
             <span class="far fa-heart"></span>
         </div>
 
@@ -104,7 +104,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__title">ohmyfood</p>
+        <h4 class="footer__title">ohmyfood</h4>
         <a class="footer__link" href="#"><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span><p>Proposer un restaurant</p></a>
         <a class="footer__link" href="#"><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span><p>Devenir partenaire</p></a>
         <a class="footer__link" href="#"><p>Mentions légales</p></a>
