replace 'Nouveau' in html by pseudo in CSS

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         <section class="restaurants">
             <h2 class="section-title" id="restaurants">Restaurants</h2>
 
-            <div class="card">
+            <div class="card" title="Nouveau">
                 <a href="/menus/la-palette-du-gout.html">
-                    <p class="tag">Nouveau</p>
                     <img class="card__img" src="/images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                     <div class="card__content">
                         <h3 class="card__title">La palette du goût</h3>
@@ -68,9 +67,8 @@
                 <a href="#"><span class="favorite far fa-heart"></span></a>    
             </div>
 
-            <div class="card"> 
+            <div class="card" title="Nouveau"> 
                 <a href="/menus/la-note-enchantee.html">
-                    <p class="tag">Nouveau</p>
                     <img class="card__img" src="/images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
                     <div class="card__content">
                         <h3 class="card__title">La note enchantée</h3>
