modify sass file names

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>ohmyfood</title>
 </head>
-<body>
+<body class="home">
     <header class="header">
         <img class="header-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
