--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
     <!--Import Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>ohmyfood</title>
 </head>
@@ -104,10 +104,12 @@
 
     <footer class="footer">
         <h4 class="footer__title">ohmyfood</h4>
-        <a class="footer__link" href="#"><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span><p>Proposer un restaurant</p></a>
-        <a class="footer__link" href="#"><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span><p>Devenir partenaire</p></a>
-        <a class="footer__link" href="#"><p>Mentions légales</p></a>
-        <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        <div>
+            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a>
+            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a>
+            <a class="footer__link" href="#"><p>Mentions légales</p></a>
+            <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        </div>
     </footer>
 </body>
 </html>
