--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -112,10 +112,12 @@
 
     <footer class="footer">
         <h4 class="footer__title">ohmyfood</h4>
-        <a class="footer__link" href="#"><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span><p>Proposer un restaurant</p></a>
-        <a class="footer__link" href="#"><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span><p>Devenir partenaire</p></a>
-        <a class="footer__link" href="#"><p>Mentions légales</p></a>
-        <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        <div>
+            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a>
+            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a>
+            <a class="footer__link" href="#"><p>Mentions légales</p></a>
+            <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        </div>
     </footer>
 </body>
 </html>
